--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ img {
 }
 #footer {
     width: 100%;
-    border-top: solid 2px black;
+    border-top: solid 4px black;
     background-color: white;
     position: fixed;
     bottom: 0;
@@ -65,4 +65,7 @@ body {
 }
 #subtitle {
   color: black;
+}
+#headers *{
+  font-family: 'Cutive', serif;
 }
