--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ ul {
 }
 img {
     display: inline;
-
     width: 200px;
     height: 100px;
 }
@@ -84,4 +83,5 @@ body {
 }
 #my-name {
   font-family: 'Cutive', serif;
+  padding: 20px;
 }
